syntax = "proto3";

package calculator;

option go_package = "github.com/tainj/distributed_calculator2/pkg/api";

import "google/api/annotations.proto";

// ================== Основной сервис ==================
service Calculator {
  // Вычислить выражение
  rpc Calculate(CalculateRequest) returns (CalculateResponse) {
    option (google.api.http) = {
      post: "/v1/calculate"
      body: "*"
    };
  }

  // Получить результат по ID (через тело)
  rpc GetResult(GetResultRequest) returns (GetResultResponse) {
    option (google.api.http) = {
      post: "/v1/result"
      body: "*"
    };
  }

  // Получить все примеры пользователя
  rpc GetAllExamples(GetAllExamplesRequest) returns (GetAllExamplesResponse) {
    option (google.api.http) = {
      post: "/v1/examples"  // Меняем на POST
      body: "*"             // Теперь может быть фильтрация
    };
  }

  // Получить пошаговый отчёт вычисления (через тело!)
  rpc GetCalculationTrace(GetCalculationTraceRequest) returns (GetCalculationTraceResponse) {
    option (google.api.http) = {
      post: "/v1/trace"     // Было GET с {task_id} в пути → стало POST с телом
      body: "*"
    };
  }

  // Регистрация
  rpc Register(RegisterRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/v1/register"
      body: "*"
    };
  }

  // Авторизация
  rpc Login(LoginRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
  }
}

// ================== МодЕЛИ ==================

// Запрос на вычисление
message CalculateRequest {
  string expression = 1;
}

// Ответ: ID задачи
message CalculateResponse {
  string task_id = 1;
}

// Запрос результата (через тело)
message GetResultRequest {
  string task_id = 1;
}

// Ответ: либо результат, либо ошибка
message GetResultResponse {
  oneof result {
    double value = 1;
    string error = 2;
  }
}

// Запрос всех примеров (можно расширить: pagination, filter)
message GetAllExamplesRequest {
  // Пока пусто, но можно добавить later
}

// Ответ: список примеров
message GetAllExamplesResponse {
  repeated Example examples = 1;
}

// Пример (одно выражение)
message Example {
  string id = 1;
  string expression = 2;
  bool calculated = 3;
  optional double result = 4;
  string created_at = 5;
}

// Запрос трассировки вычисления
message GetCalculationTraceRequest {
  string task_id = 1;
}

// Ответ: пошаговый отчёт
message GetCalculationTraceResponse {
  string full_expression = 1;  // "(2 + 7) * 4 = 36"
  repeated string steps = 2;    // ["2 + 7 = 9", "9 * 4 = 36"]
  optional string error = 3;    // если ошибка
}

// Запрос регистрации
message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

// Запрос логина
message LoginRequest {
  string email = 1;
  string password = 2;
}

// Ответ на авторизацию
message AuthResponse {
  string token = 1;         // JWT
  string username = 2;
  string user_id = 3;
  optional string error = 4;
}